Add time feature

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="Question">
         <h1 class="Start">Quiz contain 7 questions</h1>
       </div>
-      <button class="btn Next">Next Question &#8594;</button> 
+      <button class="btn Next">Next Question &#8594;</button>
     </div>
-    </div>
+
     <div class="Container startContainer">
       <div class="Question">
         <h1 class="Start">Javscript Quiz</h1>
@@ -22,6 +22,10 @@
       <button type="Submit" class="btn Startbtn">START QUIZ</button>
     </div>
 
+    <div class="timer">
+      <h1>Timer</h1>
+      <h1 class="time">0 sec</h1>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
